using UnityEngine;

[DisallowMultipleComponent]
public class ActorView : MonoBehaviour
{
}
